package factoryPattern;

public class PaymentFactory {

}
