package factoryPattern;

public class UserFactory {

}
