@startuml Patrons de Conception

title Diagramme de Classes — Patrons de Conception\n(Factory · Singleton · State · Strategy · Observer)

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #495057
    HeaderBackgroundColor #343A40
    HeaderFontColor #FFFFFF
    ArrowColor #495057
}
skinparam packageStyle rectangle
skinparam shadowing false
skinparam noteBackgroundColor #FFF3CD
skinparam noteBorderColor #FFC107

' ═══════════════════════════════════════════
'  PATTERN FACTORY
' ═══════════════════════════════════════════
package "factories <<Factory>>" #E8F5E9 {

    class UserFactory {
        + {static} createUser(role : UserRole,\n  id : int, firstName : String,\n  lastName : String, email : String,\n  password : String) : User
    }

    class PaymentFactory {
        + {static} createPaymentStrategy(\n  paymentType : PaymentType) : PaymentStrategy
    }
}

note top of UserFactory
  Crée Parent ou Administrator
  selon le UserRole reçu
end note

note top of PaymentFactory
  Retourne SinglePayment ou SplitPayment
  selon le PaymentType reçu
end note

' ═══════════════════════════════════════════
'  PATTERN SINGLETON
' ═══════════════════════════════════════════
package "singleton <<Singleton>>" #E3F2FD {

    class AppConfig {
        - {static} instance : AppConfig
        - applicationName : String
        - maxInstallments : int
        - minPaymentAmount : double
        - parentsFilePath : String
        - childrenFilePath : String
        - timeSlotsFilePath : String
        - registrationsFilePath : String
        - paymentsFilePath : String
        - notificationsFilePath : String
        - adminFilePath : String
        --
        - AppConfig()
        + {static} getInstance() : AppConfig
        + getApplicationName() : String
        + getMaxInstallments() : int
        + getMinPaymentAmount() : double
        + getParentsFilePath() : String
        + getChildrenFilePath() : String
        + getTimeSlotsFilePath() : String
        + getRegistrationsFilePath() : String
        + getPaymentsFilePath() : String
        + getNotificationsFilePath() : String
        + getAdminFilePath() : String
    }

    AppConfig --> AppConfig : instance unique\n(getInstance)
}

' ═══════════════════════════════════════════
'  PATTERN STRATEGY
' ═══════════════════════════════════════════
package "interfaces + strategies <<Strategy>>" #FFF8E1 {

    interface PaymentStrategy <<interface>> {
        + calculatePayment(totalAmount : double,\n  installmentCount : int) : double
    }

    class SinglePayment {
        + calculatePayment(totalAmount : double,\n  installmentCount : int) : double
    }

    class SplitPayment {
        + calculatePayment(totalAmount : double,\n  installmentCount : int) : double
    }

    PaymentStrategy <|.. SinglePayment   : implements
    PaymentStrategy <|.. SplitPayment   : implements
}

note right of SinglePayment
  Retourne totalAmount en entier
end note
note right of SplitPayment
  Retourne totalAmount / installmentCount
end note

' ═══════════════════════════════════════════
'  PATTERN STATE
' ═══════════════════════════════════════════
package "interfaces + states <<State>>" #FCE4EC {

    interface ITimeSlotState <<interface>> {
        + register(timeSlot : TimeSlot) : void
    }

    class AvailableState {
        + register(timeSlot : TimeSlot) : void
    }

    class FullState {
        + register(timeSlot : TimeSlot) : void
    }

    ITimeSlotState <|.. AvailableState : implements
    ITimeSlotState <|.. FullState      : implements
}

note right of AvailableState
  Accepte l'inscription si places disponibles.
  Passe à FullState si capacité atteinte.
end note
note right of FullState
  Lève CapacityException → inscription refusée.
end note

' ═══════════════════════════════════════════
'  PATTERN OBSERVER
' ═══════════════════════════════════════════
package "interfaces + observers <<Observer>>" #EDE7F6 {

    interface Observer <<interface>> {
        + update(message : String) : void
    }

    interface Subject <<interface>> {
        + addObserver(observer : Observer) : void
        + removeObserver(observer : Observer) : void
        + notifyObservers(message : String) : void
    }

    class ParentObserver {
        - parentId : int
        - parentName : String
        - notificationRepository : NotificationRepository
        --
        + ParentObserver(parentId : int, parentName : String)
        + update(message : String) : void
    }

    Observer <|.. ParentObserver : implements
}

note right of ParentObserver
  update() crée une Notification,
  la marque envoyée et la persiste
  dans notifications.json
end note

' ─────────────────────────────────────────
'  RELATIONS INTER-PATRONS
' ─────────────────────────────────────────
UserFactory ..> "Models.User"       : <<creates>>
UserFactory ..> "Models.Parent"     : <<creates>>
UserFactory ..> "Models.Administrator" : <<creates>>

PaymentFactory ..> PaymentStrategy  : <<creates>>
PaymentFactory ..> SinglePayment    : <<creates>>
PaymentFactory ..> SplitPayment     : <<creates>>

"Models.TimeSlot" --> ITimeSlotState : state
"Models.TimeSlot" ..> AvailableState : refreshState()
"Models.TimeSlot" ..> FullState      : refreshState()

Subject --> Observer : notifie *

@enduml
